# chi2mc

./: .gitignore  BATCH_PROCESSING.md  BATCH_PROCESSING_SUMMARY.md  Cargo.toml  OPTIMIZATIONS.md  PROGRESS_TRACKING.md  PROGRESS_TRACKING_SUMMARY.md  QUICKSTART.md  QUICK_START_OPTIMIZED.md  README.md  TROUBLESHOOTING_PARALLELISM.md  benchmark_performance.py  chi2_homogeneity.py  example_usage.py  pyproject.toml  test_chi2_homogeneity.py  test_parallelism.py
e2e/: e2e.sh  fixture.tsv
examples/: benchmark_performance.py  example_usage.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: cli.rs  io.rs  main.rs  monte_carlo.rs  probeset.rs  report.rs  stats.rs
src/chi2mc/: __init__.py  chi2_homogeneity.py  cli.py
tests/: conftest.py  integration.rs  test_chi2_homogeneity.py  test_parallelism.py
