[package]
name = "chi2mc"
version = "0.1.0"
edition = "2021"
description = "Two-tier chi-squared homogeneity test with Monte Carlo simulation for genotype frequencies"

[[bin]]
name = "chi2mc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
rayon = "1"
rand = "0.8"
rand_chacha = "0.3"
statrs = "0.18"
indicatif = "0.17"
chrono = "0.4"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
