[project]
name = "chi2mc"
version = "0.1.0"
description = "Two-tier chi-squared homogeneity test with Monte Carlo simulation for genotype frequencies"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
accel = ["numba"]
progress = ["tqdm"]
dev = ["pytest", "ruff"]

[project.scripts]
chi2mc = "chi2mc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
